cropped image to ensure image stays aligned with header

--- a/components/body/desktop.styl
+++ b/components/body/desktop.styl
@@ -22,7 +22,7 @@
       width 100%
       margin-top 0px
       height 54vw
-      background-size contain
+      background-size cover
       background-position center center
       background-repeat no-repeat
       max-height 400px
