--- a/components/body/index.styl
+++ b/components/body/index.styl
@@ -146,7 +146,7 @@
       margin-top 0px
       // height 54vw
       height 65vw
-      background-size contain
+      background-size cover
       background-position center center
       background-repeat no-repeat
       max-height 400px
