--- a/components/carousel/carousel.styl
+++ b/components/carousel/carousel.styl
@@ -18,7 +18,7 @@ figure.slide-images
 
 figure.slide-images div
   width 100%
-  max-height 246px
+  // max-height 246px
   margin-top 40px
   margin-bottom 15px
 
@@ -46,7 +46,7 @@ figure.slide-images div
 
   figure.slide-images div
     width 100%
-    max-height 346px
+    max-height 400px
     margin-top 40px
     margin-bottom 15px
 
